--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "systemjs-transform-babel",
-  "main": "dist/babel-transform.js",
+  "name": "systemjs-babel",
+  "main": "dist/systemjs-babel",
   "files": [
-    "dist/babel-transform.js"
+    "dist/systemjs-babel.js"
   ],
-  "version": "0.1.2",
+  "version": "0.2.0",
   "repository": {
     "type": "git",
-    "url": "http://github.com/systemjs/systemjs-transform-babel.git"
+    "url": "http://github.com/systemjs/systemjs-babel.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/systemjs/systemjs-transform-babel/issues"
+    "url": "https://github.com/systemjs/systemjs-babel/issues"
   },
-  "homepage": "https://github.com/systemjs/systemjs-transform-babel",
+  "homepage": "https://github.com/systemjs/systemjs-babel",
   "devDependencies": {
     "@babel/core": "^7.4.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-dynamic-import": "^7.10.4",
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
     "@babel/plugin-transform-modules-systemjs": "^7.4.0",
+    "@babel/preset-typescript": "^7.10.4",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0"
   },
