--- a/package.json
+++ b/package.json
@@ -22,15 +22,13 @@
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
     "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-syntax-class-properties": "^7.10.4",
     "@babel/plugin-transform-modules-systemjs": "^7.4.0",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/plugin-transform-typescript": "^7.11.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "build": "webpack"
-  },
-  "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.10.5"
   }
 }
